--- a/index.html
+++ b/index.html
@@ -103,10 +103,46 @@
 
         <section class="cartoes">
             <div class="textt">
-               <h2>Caminho rápido para<br> regularização do seu<br> cartão Ailos</h2>
+               <h2>Caminho rápido para<br> regularização do seu cartão Ailos</h2>
                 <a href="#site">Negocie aqui</a>
             </div>
             <img src="./imagem/Banner cartao.png">
+        </section>
+
+        <section>
+            <div class="banner-desp">
+                <img src="./imagem/banner emprestimo.jpg" alt="Banner" class="banner-img">
+                <div class="texte">
+                    <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
+                    <a href="#site">Negocie aqui</a>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="banner-mobile">
+                <img src="./imagem/ailos emprestimo mobile.jpg" alt="Banner" class="banner-img">
+                <div class="texte">
+                    <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
+                    <a href="#site">Negocie aqui</a>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="banner-app">
+                <div class="textte">
+                    <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
+                    
+        <a href="https://play.google.com/store/apps/details?id=br.coop.cecred.cecredmobile&hl=pt_BR"> 
+            <img src="imagem/googleplay.svg">
+         </a>
+         <a href="https://apps.apple.com/br/app/ailos-cooperativas-de-cr%C3%A9dito/id942967288">
+             <img src="imagem/appstore.svg">
+         </a>
+                </div>
+                <img src="./imagem/celular app.png" alt="Banner" class="banner-img">
+            </div>
         </section>
 
         <section class="carousel-container">
@@ -151,6 +187,22 @@
                 </div>
                 <div class="rural2">
                     <img src="./imagem/rural 1.jpg" alt="Imagem Rural 1">
+                    <div class="overlay">
+                        <h3>Crédito Rural Facilitado</h3>
+                        <p>Acesse crédito para o seu negócio rural de forma simples e rápida.</p>
+                        <a href="#">Saiba mais</a>
+                    </div>
+                </div>
+                <div class="rural3">
+                    <img src="./imagem/trator1.png" alt="Imagem Rural 1">
+                    <div class="overlay">
+                        <h3>Crédito Rural Facilitado</h3>
+                        <p>Acesse crédito para o seu negócio rural de forma simples e rápida.</p>
+                        <a href="#">Saiba mais</a>
+                    </div>
+                </div>
+                <div class="rural4">
+                    <img src="./imagem/trator.png" alt="Imagem Rural 1">
                     <div class="overlay">
                         <h3>Crédito Rural Facilitado</h3>
                         <p>Acesse crédito para o seu negócio rural de forma simples e rápida.</p>
