--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="./imagem/banner3.jpg" alt="Banner" class="banner-img">
                 <div class="text">
                     <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
-                    <a href="#site">Negocie aqui</a>
+                    <a href="./login/login.html">Negocie aqui</a>
                 </div>
             </div>
         </section>
