--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <img src="./imagem/banner3.jpg" alt="Banner" class="banner-img">
                 <div class="text">
                     <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
-                    <a href="./login/login.html">Negocie aqui</a>
+                    <a href="./login/login.html">Negocie aqui
+                    </a>
                 </div>
             </div>
         </section>
@@ -48,20 +49,20 @@
                 <img src="./imagem/imagem 1.jpg" alt="Imagem 1">
                 <h3>Atendimento pelo<br>
                     E-mail</h3>
-                <p>Temos tudo o que você precisa. Escolhas financeiras inteligentes para sua vida.</p>
-                <a href="#">Clique aqui</a>
+                <p>Renegocie pelo E-mail</p>
+                <a href="mail:atendimento.ailos@trcmail.com.br">Clique aqui</a>
             </div>
             <div class="box">
                 <img src="./imagem/imagem 2.jpeg" alt="Imagem 2">
                 <h3>Atendimento pelo telefone</h3>
-                <p>Abra uma conta PJ nas Cooperativas e tenha soluções financeiras para crescer.</p>
-                <a href="#">Clique aqui</a>
+                <p>Renegocie pelo Telefone</p>
+                <a href="tel:+08009419835">Clique aqui</a>
             </div>
             <div class="box">
                 <img src="./imagem/imagem 3.jpg" alt="Imagem 3">
                 <h3>Atendimento pelo whatsapp</h3>
-                <p>Invista de forma segura e inteligente com soluções personalizadas com a ailos.</p>
-                <a href="#">Clique aqui</a>
+                <p>Renegocie pelo Whatsapp</p>
+                <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Clique aqui</a>
             </div>
         </section>
 
@@ -127,7 +128,8 @@
             <div class="banner-desp">
                 <img src="./imagem/banner emprestimo.jpg" alt="Banner" class="banner-img">
                 <div class="texte">
-                    <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
+                    <h1>Regularize seu empréstimo agora!<br>
+                         Condições especiais para você.</h1>
                     <a href="#site">Negocie aqui</a>
                 </div>
             </div>
@@ -137,7 +139,8 @@
             <div class="banner-mobile">
                 <img src="./imagem/ailos emprestimo mobile.jpg" alt="Banner" class="banner-img">
                 <div class="texte">
-                    <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
+                    <h1>Regularize seu empréstimo agora!<br>
+                         Condições especiais para você.</h1>
                     <a href="#site">Negocie aqui</a>
                 </div>
             </div>
@@ -146,7 +149,8 @@
         <section>
             <div class="banner-app">
                 <div class="textte">
-                    <h1>Ailos: soluções financeiras<br> para suas conquistas com <br> atendimento sempre ao seu lado</h1>
+                    <h1>Aproveite todas as<br>
+                        vantagens pelo app!</h1>
                     <a href="https://play.google.com/store/apps/details?id=br.coop.cecred.cecredmobile&hl=pt_BR"> 
                         <img src="imagem/googleplay.svg">
                     </a>
@@ -193,33 +197,33 @@
                 <div class="rural1">
                     <img src="./imagem/rural 2.jpg" alt="Imagem Rural 2">
                     <div class="overlay">
-                        <h3>Soluções para o Agronegócio</h3>
-                        <p>Transformando a vida no campo com soluções financeiras eficientes e acessíveis.</p>
-                        <a href="#">Saiba mais</a>
+                        <h3>Regularize suas dívidas rurais hoje mesmo!</h3>
+                        <p>Condições especiais para quem vive do campo.</p>
+                        <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Saiba mais</a>
                     </div>
                 </div>
                 <div class="rural2">
                     <img src="./imagem/rural 1.jpg" alt="Imagem Rural 1">
                     <div class="overlay">
-                        <h3>Crédito Rural Facilitado</h3>
-                        <p>Acesse crédito para o seu negócio rural de forma simples e rápida.</p>
-                        <a href="#">Saiba mais</a>
+                        <h3>Renegocie agora e fique em dia com suas contas!</h3>
+                        <p>Parcelas que cabem no seu orçamento.</p>
+                        <a href="./login/login.html">Saiba mais</a>
                     </div>
                 </div>
                 <div class="rural3">
                     <img src="./imagem/trator1.png" alt="Imagem Rural 1">
                     <div class="overlay">
-                        <h3>Crédito Rural Facilitado</h3>
-                        <p>Acesse crédito para o seu negócio rural de forma simples e rápida.</p>
-                        <a href="#">Saiba mais</a>
+                        <h3>Facilitamos a quitação de suas dívidas rurais!</h3>
+                        <p>Juntos, buscamos a solução ideal para você.</p>
+                        <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Saiba mais</a>
                     </div>
                 </div>
                 <div class="rural4">
                     <img src="./imagem/trator.png" alt="Imagem Rural 1">
                     <div class="overlay">
-                        <h3>Crédito Rural Facilitado</h3>
-                        <p>Acesse crédito para o seu negócio rural de forma simples e rápida.</p>
-                        <a href="#">Saiba mais</a>
+                        <h3>Dê um passo à frente e regularize sua situação!</h3>
+                        <p>Renegociação simples, rápida e sem burocracia.</p>
+                        <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Saiba mais</a>
                     </div>
                 </div>
             </div>
