--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 
         <section class="container">
             <div class="box">
+                <img src="./imagem/jud 2.jpg" alt="Imagem 1">
+                <h3>Atendimento Judicial</h3>
+                <p>Canal exclusivo para atendimento administrativo. Em caso de pendências judiciais, acesse os canais abaixo.</p>
+                <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Whatsapp</a>
+                <a href="tel:+08009419835">Telefone</a>
+            </div>
+            <div class="box">
                 <img src="./imagem/imagem 1.jpg" alt="Imagem 1">
                 <h3>Atendimento pelo<br>
                     E-mail</h3>
