--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navegation">
             <img src="./imagem/logo-ailos.svg" class="logo">
             <div class="button">
-                 <a href="https://trctaborda.com.br/index">Venha nós conhecer</a>
+                 <a href="https://trctaborda.com.br/index">Venha nos conhecer</a>
                  <a href="https://trctaborda.com.br/index">Parceiros</a>
                  <a href="https://trctaborda.com.br/index">TRC Taborda parceira autorizada</a>
             </div>
@@ -45,12 +45,12 @@
         </section>
 
         <section class="container">
-            <div class="box">
+            <div class="boxx">
                 <img src="./imagem/jud 2.jpg" alt="Imagem 1">
                 <h3>Atendimento Judicial</h3>
-                <p>Canal exclusivo para atendimento administrativo. Em caso de pendências judiciais, acesse os canais abaixo.</p>
-                <a style="background-color: #00ae40;"  href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Whatsapp</a>
-                <a style="background-color: #00ae40;"  href="tel:+08009419835">Telefone</a>
+                <p>Em caso de pendências judiciais, acesse os canais abaixo.</p>
+                <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Whatsapp</a>
+                <a href="tel:+08009419835">Telefone</a>
             </div>
             <div class="box">
                 <img src="./imagem/imagem 1.jpg" alt="Imagem 1">
