--- a/login/login.html
+++ b/login/login.html
@@ -20,9 +20,11 @@
                 <img src="../imagem/banner ren.jpg" alt="Banner" class="banner-img">
                 <img src="../imagem/banner ren mobile.jpg" alt="Banner" class="bannerr-img">
                 <div class="text">
-                    <h1>Insira seus dados e aguarde. <br>
-                    Estamos consultando suas <br>
+                    <h1>Insira seus dados e aguarde.<br>
+                    Estamos consultando suas<br>
                     informações!</h1>
+                    <p style="font-weight: bold;">Caso seu contrato seja judicial, por favor, dirija-se<br>
+                         à página inicial em "Atendimento Judicial".</p>
                     <iframe id="iframe-conteudo" src="https://trcconsult.com.br/NWeb/index-ailos.jsp?origem=trc" width="500" height="680" allow="autoplay; fullscreen"allowfullscreen></iframe>
                 </div>
             </div>
