--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <section class="container">
             <div class="boxx">
-                <img src="./imagem/jud 2.jpg" alt="Imagem 1">
+                <img src="./imagem/jud 5.jpg" alt="Imagem 1">
                 <h3>Atendimento Judicial</h3>
                 <p>Em caso de pendências judiciais, acesse os canais abaixo.</p>
                 <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Whatsapp</a>
@@ -126,7 +126,7 @@
         <section class="cartoes">
             <div class="textt">
                <h2>Caminho rápido para<br> regularização do seu cartão Ailos</h2>
-                <a href="#site">Negocie aqui</a>
+               <a href="./login/login.html">Negocie aqui</a>
             </div>
             <img src="./imagem/Banner cartao.png">
         </section>
@@ -137,7 +137,7 @@
                 <div class="texte">
                     <h1>Regularize seu empréstimo agora!<br>
                          Condições especiais para você.</h1>
-                    <a href="#site">Negocie aqui</a>
+                    <a href="./login/login.html">Negocie aqui</a>
                 </div>
             </div>
         </section>
@@ -148,7 +148,18 @@
                 <div class="texte">
                     <h1>Regularize seu empréstimo agora!<br>
                          Condições especiais para você.</h1>
-                    <a href="#site">Negocie aqui</a>
+                    <a href="./login/login.html">Negocie aqui</a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="banner-jud">
+                <img src="./imagem/banner jud.jpg" alt="Banner" class="banner-img">
+                <div class="textet">
+                    <h1>Precisa de atendimento judicial da Ailos?<br>
+                         Entre em contato e receba suporte ágil <br>
+                         para suas demandas!</h1>
+                    <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Entre contato aqui</a>
                 </div>
             </div>
         </section>
