--- a/login/login.html
+++ b/login/login.html
@@ -24,7 +24,7 @@
                     Estamos consultando suas<br>
                     informações!</h1>
                     <p style="font-weight: bold;">Caso seu contrato seja judicial, por favor, dirija-se<br>
-                         à página inicial em "Atendimento Judicial".</p>
+                         à página inicial em  <a style="color:#005fa3; text-decoration: none;" href="../index.html">Atendimento Judicial.</a></p>
                     <iframe id="iframe-conteudo" src="https://trcconsult.com.br/NWeb/index-ailos.jsp?origem=trc" width="500" height="680" allow="autoplay; fullscreen"allowfullscreen></iframe>
                 </div>
             </div>
