--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                 <img src="./imagem/banner jud.jpg" alt="Banner" class="banner-img">
                 <div class="textet">
                     <h1>Precisa de atendimento judicial da Ailos?<br>
-                         Conte com nosso atendimento rápido <br>
-                        e eficiente para te ajudar!</h1>
+                         Entre em contato e receba suporte ágil <br>
+                         para suas demandas!</h1>
                     <a href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Entre contato aqui</a>
                 </div>
             </div>
