--- a/login/login.html
+++ b/login/login.html
@@ -24,7 +24,7 @@
                     Estamos consultando suas<br>
                     informações!</h1>
                     <p style="font-weight: bold;">Caso seu contrato seja judicial, <br>
-                        entre em contato com nosso <a style="color:#00ae40; text-decoration: none;" href="https://api.whatsapp.com/send/?phone=554130220412&text&type=phone_number&app_absent=0">Whatsapp.</a></p>
+                        entre em contato conosco pelo <a style="color:#00ae40; text-decoration: none;" href="../index.html">Whatsapp.</a></p>
                     <iframe id="iframe-conteudo" src="https://trcconsult.com.br/NWeb/index-ailos.jsp?origem=trc" width="500" height="680" allow="autoplay; fullscreen"allowfullscreen></iframe>
                 </div>
             </div>
